--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root">
-      <h1>arman is here</h1>
+      <h1>not rendered</h1>
     </div>
     <script type="module" src="app.js"></script>
   </body>
